# blog

./: .gitignore  Cargo.toml  README.md  index.html
src/: main.rs  md.rs  web.rs
static/: home.css  post.css
templates/: index.html  post.html
