[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
askama_warp = "0.13.0"
chrono = "0.4.37"
pulldown-cmark = "0.10.2"
regex = "1.10.4"
serde_yaml = "0.9.34"
tokio = { version = "1.37.0", features = ["full"] }
warp = "0.3.6"